[gd_scene load_steps=3 format=3 uid="uid://p6w4yj0ymbuj"]

[ext_resource type="Script" path="res://scripts/playerBullet.gd" id="1_ypqni"]
[ext_resource type="Texture2D" uid="uid://42xyxp74p4a1" path="res://sprites/FireProjectile.png" id="2_etlpm"]

[node name="fireball" type="Area2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource("1_ypqni")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_etlpm")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(12, -24, 20.8, -24, 28, -16.8, 28, -12, 28.8, -12, 32, -8.8, 32, 17.2, 28, 19.2, 28, 24.8, 20.8, 32, -30, 32, -30, 29, -32, -8.8, -32, -10, -29.1, -10, -24, -11.5, -24, -28.8, -20.8, -32, 0, -32, 12, -32)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
